# faceid-office

./: .env.example  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  clean_branches.sh  docker-compose.yml  lint-staged.config.js  livekit.yaml.template  package.json  pnpm-workspace.yaml  turnserver.conf.template
ai/: .env.example  .gitignore  README.md  api.py  compress.py  processing.py  pyproject.toml  requiredment.txt  requirements.txt  setup.bat  setup_macos.bat
ai/app/: api.py  main.py  old_api.py
ai/app/Pun_NEW/: compress_faiss_CRUD.py  main30.py
ai/app/__vector/: index.faiss  index.pkl
ai/app/backups/: core_prototype.py  vector_prototype.py
ai/app/configs/: app_config.py  core_config.py
ai/app/constants/: app_config.py  config.py  core_config.py  redis_keys.py  settings.py
ai/app/core/: face_blob.py  face_detection.py  face_embedding.py  face_recognition.py  face_tracking.py  main.py  vector.py
ai/app/database/: mongoDB.py  redis.py
ai/app/lib/: detection.py
ai/app/models/: detection.py  setting.py  settings.py  user_log.py
ai/app/old/: compress.py  old_api.py
ai/app/prototype/: core_prototype.py  vector_prototype.py
ai/app/routes/: core_route.py  detection.py  setting.py  user_log.py  vector_route.py  video_route.py  video_stream_route.py  video_stream_v1_route.py  video_stream_v2_route.py  websocket_route.py
ai/app/services/: core_service.py  detection.py  detection_service.py  redis.py  redis_service.py  server_service.py  setting.py  user_log.py  vector_service.py  video_service.py  video_stream_service.py  (+2 more)
(+413 files in other folders)
