[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"

dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "numpy (>=1.24,<2.0)",
    "facenet-pytorch (>=2.6.0,<3.0.0)",
    "torchvision (==0.17.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "ultralytics (>=8.3.130,<9.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pymongo[srv] (>=4.12.1,<5.0.0)",
    "redis (>=6.0.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
